<resources>
    <string name="app_name">PMD2020</string>
    <string name="newspaper">NewsPaper</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="add_new">Publish New</string>
    <string name="list_news">List News</string>
    <string name="more_options">More Options</string>
    <string name="list_local_news">List Stored News</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="category">Category</string>
    <string name="abstrac">Abstract</string>
    <string name="body">Body</string>
    <string name="image">Image</string>
    <string name="description">Description</string>
    <string name="missing_data">Missing Data</string>
    <string name="new_published">Article Created</string>
    <string name="ok">Ok</string>


</resources>
